--- a/index.html
+++ b/index.html
@@ -16,12 +16,22 @@
 <body>
   <Header>
     <div class="logo"><a href=""><img src="img/logo.png" alt="" height="150px" width="150px"></a></div>
-    <nav>
-      <ul>
-        <li><a href="" class="login">Login</a></li>
-        <li><a href="" class="cadastro">Cadastro</a></li>
-      </ul>
-    </nav>
+
+    <div class="right-menu">
+
+      <a href="">
+        <div class="usuario">
+          <img src="img/icons/user.png" alt="" height="25px">
+          <span>Login</span>
+        </div>
+      </a>
+      <a href="">
+        <div class="configuracoes">
+          <img src="img/icons/configurações.png" alt="" height="25px">
+          <span>Configurações</span>
+        </div>
+      </a>
+    </div>
   </Header>
   <main></main>
   <footer>
