--- a/index.html
+++ b/index.html
@@ -15,23 +15,40 @@
 
 <body>
   <Header>
-    <div class="logo"><a href=""><img src="img/logo.png" alt="" height="150px" width="150px"></a></div>
-
-    <div class="right-menu">
-
-      <a href="">
-        <div class="usuario">
-          <img src="img/icons/user.png" alt="" height="25px">
-          <span>Login</span>
-        </div>
-      </a>
-      <a href="">
-        <div class="configuracoes">
-          <img src="img/icons/configurações.png" alt="" height="25px">
-          <span>Configurações</span>
-        </div>
-      </a>
+    <div class="header-container">
+      <div class="logo"><a href=""><img src="img/logo.png" alt="" height="150px" width="150px"></a></div>
+      <div class="right-menu">
+        <a href="">
+          <div class="usuario">
+            <img src="img/icons/user.png" alt="" height="25px">
+            <span>Login</span>
+          </div>
+        </a>
+        <a href="">
+          <div class="configuracoes">
+            <img src="img/icons/configurações.png" alt="" height="25px">
+            <span>Configurações</span>
+          </div>
+        </a>
+        <a href="">
+          <div class="menu-hb">
+            <img src="img/icons/menu-hambúrguer.png" alt="" height="24px"">
+          </div>
+        </a>
+      </div>
     </div>
+
+    <nav class=" menuTop">
+            <div class="menuTop_content">
+              <div class="home Content"><a href="">Página Inicial</a></div>
+              <div class="servicesOrfetados Content"><a href="">Serviços Orfetados</a></div>
+              <div class="servicesAgendamento Content"><a href="">Agendamento de Serviços</a></div>
+              <div class="servicesAberto Content"><a href="">Serviços em Aberto</a></div>
+              <div class="servicesRealizados Content"><a href="">Serviços Realizados</div>
+        </a>
+      </div>
+
+      </nav>
   </Header>
   <main></main>
   <footer>
